subprojects/groovy-parser-antlr4/src/test/resources/fail/Modifier_03x.groovy
final final int a = 1;